# cryptonestx

./: .dockerignore  .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt
client/: admin.py  models.py  urls.py  utils.py  views.py
client/management/commands/: process_daily_returns.py  transfer_matured_investments.py
client/migrations/: 0001_initial.py  0002_initial.py
client/static/client/css/: dashlitedeae.css  dashlitedeae2.css  main.css  style.css
client/static/client/dash/js/: task.js
client/static/client/js/: main.js
client/templates/client/dashboard/: base.html  deposit.html  index.html  invest-form.html  invest.html  invest2.html  profile.html  referral.html  test.html  withdraw.html
client/templates/client/dashboard/mail_temp/: Referral.html  admin_deposit.html  admin_invest.html  contact.html  deposit.html  deposit_success.html  invest.html  invest_admin.html  withdraw.html  withdraw_admin.html  withdraw_success.html
client/templates/client/home/: 404.html  about-us.html  affliate.html  base.html  contact.html  faq.html  index.html
cryptonestx/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  manager.py  models.py  signals.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/templates/user/: activated.html  activated_invalid.html  confirm_email.html  new_password.html  password_pass_email.html  password_reset_confirm.html  reset-password.html  signin.html  signup.html
user/templates/user/email_temp/: activation.html  password_reset.html
